--------------------------------------------------------------------------

New and Changed Features
========================

o  We now require GMP 4.1.3 or higher.

o  Significant efficiency improvements have been achieved in the case
   of closed polyhedra.

o  The classes PowerSet and Polyhedra_PowerSet have been renamed Powerset
   and Polyhedra_Powerset, respectively.

o  New explicit constructors and assignment operators allowing to obtain a
   Polyhedra_Powerset<NNC_Polyhedron> from a Polyhedra_Powerset<C_Polyhedron>
   and the other way around.  In the latter case, the topological clusure
   of the element polyhedra is computed.

o  New method

     Polyhedra_Powerset::poly_difference_assign(const Polyhedra_Powerset& y)

   assigns to `*this' the poly-difference of `*this' and `y'.

o  New method dimension_type Polyhedron::affine_dimension() returns
   the affine dimension of *this (not to be confused with the dimension
   of its enclosing vector space) or 0, if *this is empty.

o  All the methods changing (i.e., adding, removing, mapping, etc.)
   the dimensions of the vector space have been renamed so as to avoid
   any possible ambiguity with the affine dimension of the modified object.
   For instance,
     Polyhedron::add_dimensions_and_embed(dimension_type m);
   has been renamed as
     Polyhedron::add_space_dimensions_and_embed(dimension_type m);

o  The constructor C_Polyhedron(const NNC_Polyhedron& y) no longer
   throws an exception if `y' is not topologically closed.  Rather,
   it constructs a C_Polyhedron representing the topological closure
   of `y'.

o  The following constructors have been made explicit:

     ConSys::ConSys(const Constraint& c),
     GenSys::GenSys(const Generator& g),
     C_Polyhedron::C_Polyhedron(const ConSys& cs),
     C_Polyhedron::C_Polyhedron(const GenSys& cs),
     C_Polyhedron::C_Polyhedron(ConSys& cs),
     C_Polyhedron::C_Polyhedron(GenSys& cs),
     NNC_Polyhedron::NNC_Polyhedron(const ConSys& cs),