@@ -119,7 +119,7 @@ main() TRY {
 #endif
 
   ps1.BGP99_extrapolation_assign
-    (ps2, widen_fun(&Polyhedron::H79_widening_assign), 7);
+    (ps2, widen_fun_ref(&Polyhedron::H79_widening_assign), 7);
 
   PSet known_result(2, Polyhedron::EMPTY);
   C_Polyhedron kr_1(2);
@@ -139,7 +139,7 @@ main() TRY {
 #if NOISY
   cout
     << "*** ps1.BGP99_extrapolation_assign"
-    << "(ps2, widen_fun(&H79_widening_assign), 7) ***"
+    << "(ps2, widen_fun_ref(&H79_widening_assign), 7) ***"
     << endl
     << ps1 << endl;
 #endif
