@@ -154,7 +154,7 @@ main() TRY {
 #endif
     Sn.upper_bound_assign(T);
     Sn.BHZ03_widening_assign<H79_Certificate>
-      (T, widen_fun(&Polyhedron::H79_widening_assign));
+      (T, widen_fun_ref(&Polyhedron::H79_widening_assign));
 #if NOISY
     cout << "T" << n << " = " << Sn << endl;
 #endif
