@@ -18,6 +18,8 @@ o  Significant efficiency improvements have been achieved in the case
 o  The classes PowerSet and Polyhedra_PowerSet have been renamed Powerset
    and Polyhedra_Powerset, respectively.
 
+o  The helper function widen_fun has been renamed widen_fun_ref.
+
 o  New explicit constructors and assignment operators allowing to obtain a
    Polyhedra_Powerset<NNC_Polyhedron> from a Polyhedra_Powerset<C_Polyhedron>
    and the other way around.  In the latter case, the topological clusure
